# lfbo_gemm

./: .gitignore  README.md
benchmark/: CMakeLists.txt
benchmark/src/: kernel_bridge.hpp.in  main.cpp
docs/: design.md  external_tuner_design.md  perf_diag.md  search_space.md
matopt-tuner/: .gitignore  README.md  pyproject.toml
matopt-tuner/examples/: perf_diag_profile_v1.yaml  space_config.yaml
matopt-tuner/src/matopt/: __init__.py  aot_builder.py  benchmark_runner.py  benchmarking.py  cli.py  exporter.py  history.py  objectives.py  perf_diag.py  protocol.py  reporting.py  runner.py  schedulers.py  session.py  space.py  space_config.py  visualization.py
matopt-tuner/src/matopt/search/: __init__.py  lfbo.py  random.py
matopt-tuner/tests/: test_aot_native.py  test_benchmarking.py  test_core.py  test_exporter.py  test_lfbo.py  test_native_avx2.py  test_perf_diag.py  test_reporting.py  test_runner.py  test_session.py  test_space_config.py  test_visualization.py
patches/: README.md  onednn-v3.12.2-matopt.patch
